@@ -68,7 +68,8 @@ class Recipe:
         setuptools.archive_util.unpack_archive(fname, tmp)
           
         here = os.getcwd()
-        os.mkdir(dest)
+        if not os.path.exists(dest):
+            os.mkdir(dest)
 
         try:
             os.chdir(tmp)
